update dev for project continuation